fixed spacing issue with the action words

--- a/_sass/3-layout/description.sass
+++ b/_sass/3-layout/description.sass
@@ -12,7 +12,7 @@
 .rw-words
   display: inline
   text-align: left
-  text-indent: 0.6%
+  text-indent: 0.3em
   span
     position: absolute
     opacity: 0
